source/blender/blenkernel/intern/crazyspace.c
@@ -417,11 +417,11 @@ int BKE_sculpt_get_first_deform_matrices(struct Depsgraph *depsgraph,
         mti->deformMatrices(md, &mectx, me_eval, deformedVerts, defmats, me_eval->totvert);
       }
       else {
+        /* More complex handling will continue in BKE_crazyspace_build_sculpt.
+         * Exiting the loop on a non-deform modifier causes issues - T71213. */
+        BLI_assert(crazyspace_modifier_supports_deform(md));
         break;
       }
-    }
-    else {
-      break;
     }
   }
 
